--- a/IMAPP/web/index.xhtml
+++ b/IMAPP/web/index.xhtml
@@ -16,12 +16,10 @@
     <h:form prependId="false">
 
 
-
-
             <h3>Point your Mobile Device on the following QR Code to activate your Mobile App 2 Factor Authentication</h3>
 
             <p:panelGrid columns="1">
-                <p:barcode value="http://localhost:8080/imapp/index.xhtml" type="qr"/>
+                <p:barcode value="http://localhost:8080/imapp/index.xhtml - Hello World" type="qr"/>
             </p:panelGrid>
             
 
