Implementing the System Manager

--- a/IMAPP/web/validate.xhtml
+++ b/IMAPP/web/validate.xhtml
@@ -14,7 +14,7 @@
 
             <p:panel styleClass="col-centered" header="Validate OTP Password">
 
-                <p:messages id="growl"/>
+                <p:messages id="growl" showDetail="true"/>
 
                 <h:panelGrid columns="2">
                     <h:outputLabel value="User Name"/>
