Implementing the System Manager

--- a/mobile2fa/Linq2FA/app/src/main/assets/barcode.html
+++ b/mobile2fa/Linq2FA/app/src/main/assets/barcode.html
@@ -10,9 +10,8 @@
 <div class="container">
     <h3>Steps for Activating Your Account</h3>
     <ul>
-        <li>From Desktop Access http://www.is.com.sa</li>
-        <li>Register your Account</li>
-        <li>Scan the barcode by clicking the below button</li>
+        <li>Login to the NADEC LinQ2FA User Portal</li>
+        <li>Scan the QR Code in the Token Activation Function.</li>
     </ul>
 </div>
 </body>
