--- a/mobile2fa/Linq2FA/app/src/main/assets/welcomepage.html
+++ b/mobile2fa/Linq2FA/app/src/main/assets/welcomepage.html
@@ -17,11 +17,11 @@
     <div class="row">
 
         <div class="col-sm-8">
-            <h2>Nadec Factor</h2>
-            <p>Nadec Factor provides a suite of mobile phone-based two-factor authentication methods to secure access to sensitive data and applications. By leveraging the user's existing phone, Nadec offers supreme convenience for users and a cost-effective, secure platform for enterprises. It can be instantly integrated with leading remote access VPNs, virtual desktops, single sign-on systems, and web applications. </p>
+            <h2>Nadec-LinQ2FA</h2>
+            <p>Nadec-LinQ2FA provides a suite of mobile phone-based two-factor authentication methods to secure access to sensitive data and applications. By leveraging the user's existing phone, Nadec offers supreme convenience for users and a cost-effective, secure platform for enterprises. It can be instantly integrated with leading remote access VPNs, virtual desktops, single sign-on systems, and web applications. </p>
             <p>Nadec is significantly less expensive to set up and maintain because users require very little training and almost no ongoing support.</p>
             <p>
-                Nadec Factor  (One Time Password) provides simple solution to give control back to enterprises and end users without compromising security or access by delivering strong authentication through an innovative way. Nadec offers instant integration with:
+                Nadec-LinQ2FA  (One Time Password) provides simple solution to give control back to enterprises and end users without compromising security or access by delivering strong authentication through an innovative way. Nadec offers instant integration with:
             </p>
             <br />
             <p>
@@ -44,7 +44,7 @@
                 In today's increased mobile users, traditional user login method of simple username and password is not secure enough anymore and poses high risk to corporate data. Two-factor authentication reduces such risk by introducing the dynamic password generated using OATH (Open Authentication) event-based and time based algorithms.
             </p>
             <p>
-                <strong class="displayblock marginbot_5">Nadec Factor Features</strong>
+                <strong class="displayblock marginbot_5">Nadec-LinQ2FA Features</strong>
                 Nadec offers advanced features to streamline large-scale deployments, add additional layers of security, and more:
             </p>
             <br />
