--- a/mobile2fa/Linq2FA/app/src/main/assets/welcomepage.html
+++ b/mobile2fa/Linq2FA/app/src/main/assets/welcomepage.html
@@ -11,7 +11,7 @@
 <div class="container">
 
     <div class="page-header">
-        <img src="http://www.is.com.sa/Portals/0/logosmall.png"/>
+        <img class="center-block" src="logo.png"/>
     </div>
 
     <div class="row">
