--- a/mobile2fa/Linq2FA/app/src/main/assets/welcomepage.html
+++ b/mobile2fa/Linq2FA/app/src/main/assets/welcomepage.html
@@ -18,88 +18,20 @@
 
         <div class="col-sm-8">
             <h2>Nadec-LinQ2FA</h2>
-            <p>Nadec-LinQ2FA provides a suite of mobile phone-based two-factor authentication methods to secure access to sensitive data and applications. By leveraging the user's existing phone, Nadec offers supreme convenience for users and a cost-effective, secure platform for enterprises. It can be instantly integrated with leading remote access VPNs, virtual desktops, single sign-on systems, and web applications. </p>
-            <p>Nadec is significantly less expensive to set up and maintain because users require very little training and almost no ongoing support.</p>
+           <p>
+
+               Nadec provides One Time Password (OTP) mobile phone-based two-factor authentication method to secure access to sensitive data and applications. By leveraging the user's existing phone, Nadec-LinQ2FA offers best convenience for users to protect NADEC systems by using their Smart Phone at any time anywhere.
+
+           </p>
+
             <p>
-                Nadec-LinQ2FA  (One Time Password) provides simple solution to give control back to enterprises and end users without compromising security or access by delivering strong authentication through an innovative way. Nadec offers instant integration with:
+                Two-Factor Authentication solution is used to verify a person's identity for security purposes.  Your phone is your authentication token Zero-Footprint choice of authentication method High ROI (return of investment). It allows you to comply with company security policy and regulations and delivers robust support to current and evolving authentication needs.   For any further information, please contact to Nadec Service Desk.
             </p>
-            <br />
-            <p>
-                <strong class="displayblock marginbot_5">Two-Factor Authentication</strong>
-                A factor is a piece of information used to verify a person's identity for security purposes. The three most commonly recognized factors are:
-            </p>
-            <ul class="newlist">
-                <li>
-                    'Something you KNOW', such as a password or PIN
-                </li>
-                <li>
-                    'Something you HAVE', such as a credit card or mobile phone
-                </li>
-                <li>
-                    'Something you ARE', biometric data, such as fingerprint, retina
-                </li>
-            </ul>
-            <br />
-            <p>
-                In today's increased mobile users, traditional user login method of simple username and password is not secure enough anymore and poses high risk to corporate data. Two-factor authentication reduces such risk by introducing the dynamic password generated using OATH (Open Authentication) event-based and time based algorithms.
-            </p>
-            <p>
-                <strong class="displayblock marginbot_5">Nadec-LinQ2FA Features</strong>
-                Nadec offers advanced features to streamline large-scale deployments, add additional layers of security, and more:
-            </p>
-            <br />
 
 
-            <ul class="newlist">
-                <li>
-                    Your phone is your authentication token
-                </li>
-                <li>
-                    Zero-Footprint (nothing to install for end users)
-                </li>
-                <li>
-                    Choice of authentication method
-                </li>
-                <li>
-                    High ROI (return of investment)
-                </li>
-                <li>
-                    Allows you to comply with standards and regulations
-                </li>
-                <li>
-                    Delivers robust support to current and evolving authentication needs
-                </li>
-                <li>
-                    Automatic enabling and disabling of user accounts
-                </li>
-                <li>
-                    OATH compliant OTP
-                </li>
-                <li>
-                    Administrator defined time release and length of session
-                </li>
-                <li>
-                    Network sessions reporting
-                </li>
-                <li>
-                    Enterprise Management Software
-                </li>
-                <li>
-                    Redundancy and Load Balancing
-                </li>
-                <li>
-                    PIN Security
-                </li>
-                <li>
-                    Active Directory and LDAP Integration
-                </li>
-                <li>
-                    User Management Tools for Help Desks
-                </li>
-                <li>
-                    Logging and Reporting Capabilities
-                </li>
-            </ul>
+
+
+
         </div>
 
     </div>
