changing the logo

--- a/mobile2fa/Linq2FA/app/src/main/assets/welcomepage.html
+++ b/mobile2fa/Linq2FA/app/src/main/assets/welcomepage.html
@@ -17,15 +17,15 @@
     <div class="row">
 
         <div class="col-sm-8">
-            <h2>Nadec-LinQ2FA</h2>
+            <h2>LinQ2FA</h2>
            <p>
 
-               Nadec provides One Time Password (OTP) mobile phone-based two-factor authentication method to secure access to sensitive data and applications. By leveraging the user's existing phone, Nadec-LinQ2FA offers best convenience for users to protect NADEC systems by using their Smart Phone at any time anywhere.
+               Innovative Solutions provides One Time Password (OTP) mobile phone-based two-factor authentication method to secure access to sensitive data and applications. By leveraging the user's existing phone, LinQ2FA offers best convenience for users to protect Their systems by using their Smart Phone at any time anywhere.
 
            </p>
 
             <p>
-                Two-Factor Authentication solution is used to verify a person's identity for security purposes.  Your phone is your authentication token Zero-Footprint choice of authentication method High ROI (return of investment). It allows you to comply with company security policy and regulations and delivers robust support to current and evolving authentication needs.   For any further information, please contact to Nadec Service Desk.
+                Two-Factor Authentication solution is used to verify a person's identity for security purposes.  Your phone is your authentication token Zero-Footprint choice of authentication method High ROI (return of investment). It allows you to comply with company security policy and regulations and delivers robust support to current and evolving authentication needs.   For any further information, please contact to Innovative Solutions Service Desk.
             </p>
 
 
