--- a/mobile2fa/Linq2FA/app/src/main/assets/barcode.html
+++ b/mobile2fa/Linq2FA/app/src/main/assets/barcode.html
@@ -10,7 +10,7 @@
 <div class="container">
     <h3>Steps for Activating Your Account</h3>
     <ul>
-        <li>Login to the NADEC LinQ2FA User Portal</li>
+        <li>Login to the  LinQ2FA User Portal</li>
         <li>Scan the QR Code in the Token Activation Function.</li>
     </ul>
 </div>
